<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>Test </name>
    <groupId>com.test</groupId>
    <artifactId>test</artifactId>
    <version>1</version>
    <packaging>war</packaging>

    <properties>
        <java.version>1.8</java.version>
        <spring.version>4.3.18.RELEASE</spring.version>
        <build.encoding>UTF-8</build.encoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>2.20</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${build.encoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <!--<version>3.0.0-M3</version>-->
                <configuration>
                    <forkCount>2C</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <!--<testSourceDirectory>${project.basedir}/src/test/java/</testSourceDirectory>-->
                    <!--<suiteXmlFiles>-->
                        <!--<suiteXmlFile>${basedir}/src/test/resources/testng.xml</suiteXmlFile>-->
                        <!--<suiteXmlFile>${basedir}/src/test/resources/testng2.xml</suiteXmlFile>-->
                    <!--</suiteXmlFiles>-->
                    <includes>
                        <include>**/com/**</include>
                        <!--<include>com.*</include>-->
                    </includes>
                    <!--<systemPropertyVariables>-->
                        <!--<databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>-->
                    <!--</systemPropertyVariables>-->
                    <properties>
                        <property>
                            <name>usedefaultlisteners</name>
                            <value>false</value> <!-- disabling default listeners is optional -->
                        </property>
                        <property>
                            <name>listener</name>
                            <value>com.TestngSuiteListener</value>
                        </property>
                        <!--<property>-->
                            <!--<name>reporter</name>-->
                            <!--<value>org.testng.reporters.FailedReporter,org.testng.reporters.XMLReporter,org.testng.reporters.JUnitXMLReporter</value>-->
                        <!--</property>-->
                    </properties>
                    <disableXmlReport>true</disableXmlReport>
                    <!--<workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>-->
                    <!--<reportsDirectory>target/surefire-reports-${surefire.forkNumber}</reportsDirectory>-->
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!--<dependency>-->
            <!--<groupId>org.apache.maven.plugins</groupId>-->
            <!--<artifactId>maven-surefire-plugin</artifactId>-->
            <!--<version>2.22.1</version>-->
        <!--</dependency>-->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>commons-logging</groupId>
                    <artifactId>commons-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.5</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>20.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.8</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.google.auto.value</groupId>
            <artifactId>auto-value-annotations</artifactId>
            <version>1.6.2</version>
        </dependency>
        <dependency>
            <groupId>com.google.auto.value</groupId>
            <artifactId>auto-value</artifactId>
            <version>1.6.2</version>
            <scope>provided</scope>
        </dependency>


    </dependencies>



</project>
